# llm-translator

./: README.md  accelerate.json  pyproject.toml
datasets/: download.sh
src/: demo.py  run_trained.py  train.py
src/dataset/: en_ja_alignment.py  wikimatrix.py
src/misc/: load_mixtral.py  parse_htm.py  parse_wikimatrix.py  upload.py
